backend and frontend connection

--- a/src/components/core/book-group/BookGroup.scss
+++ b/src/components/core/book-group/BookGroup.scss
@@ -10,6 +10,10 @@
     background-color: #95E077;
 }
 
+.propover-error {
+    background-color: #EDA4A1;
+}
+
 @media (min-width: 600px) {
     .card {
         width: 18rem !important;
